--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -12,11 +12,11 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DS.MainModule-20180716112358.mdf;Initial Catalog=aspnet-DS.MainModule-20180716112358;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="JWT_SECRET_KEY" value=""/>
-    <add key="JWT_AUDIENCE_TOKEN" value=""/>
-    <add key="JWT_ISSUER_TOKEN" value=""/>
-    <add key="JWT_EXPIRE_MINUTES" value=""/>
-    <add key="" value=""/>
+    <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:54696" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:54696" />
+    <add key="JWT_EXPIRE_MINUTES" value="30" />
+    <add key="" value="" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -60,7 +60,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
