--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -42,13 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DTOs\Compras\RespuestaCompraDto.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaDto.cs" />
     <Compile Include="DTOs\Seguridad\AutenticacionDto.cs" />
     <Compile Include="DTOs\Seguridad\RespuestaAutenticacionDto.cs" />
-    <Compile Include="Flujos\Compra.cs" />
-    <Compile Include="Flujos\Inventario.cs" />
+    <Compile Include="Flujos\Compras.cs" />
+    <Compile Include="Flujos\Inventarios.cs" />
     <Compile Include="Flujos\Seguridad.cs" />
-    <Compile Include="Flujos\Venta.cs" />
+    <Compile Include="Flujos\Ventas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Servicios\Seguridad\AutenticarServicio.cs" />
   </ItemGroup>
@@ -65,6 +66,9 @@
       <Project>{F3BA487D-6FF4-4793-8BBA-79DA05447EC2}</Project>
       <Name>Security.MainModule</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
