KSH-20/07/2018 Extraer claims de token

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DS.MainModule-20180716112358.mdf;Initial Catalog=aspnet-DS.MainModule-20180716112358;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK7148-PC;initial catalog=Sagas.MainModule;user id=sa;password=Nts.7148;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
