--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.5Security/Security.MainModule/Security.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.5Security/Security.MainModule/Security.MainModule.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Compile Include="AuthRepository.cs" />
     <Compile Include="Criptografia\AES.cs" />
+    <Compile Include="Criptografia\SHA.cs" />
     <Compile Include="DirectorioINFOTEC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token Service\TokenAutorizacion.cs" />
