--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -6,9 +6,18 @@
 <configuration>
   <appSettings>
     <add key="WebApiUrlBase" value="http://localhost:54696/" />
+    <!--Login-->
     <add key="PostLogin" value="api/seguridad/login" />
-    <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />   
+    <!--Login-->
+       
+    <!--Compras-->
     <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
+    <!--Compras-->
+
+    <!--Empresas-->    
+    <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
+    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
+    <!--Empresas-->
 
     <!--Para el funcionamiento del token-->
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
