--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -154,6 +154,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Compras\Model\" />
+    <Folder Include="Compras\Servicio\" />
+    <Folder Include="OrdenCompra\Servisio\" />
+    <Folder Include="Requisicion\Model\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\bundles\chartscripts.bundle.js" />
@@ -3597,11 +3601,11 @@
     <Content Include="assets\plugins\waitme\waitMe.js" />
     <Content Include="assets\plugins\waitme\waitMe.min.css" />
     <Content Include="assets\plugins\waitme\waitMe.min.js" />
-    <Content Include="Compras.aspx" />
+    <Content Include="Compras\Vistas\Compras.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="Dashboard.aspx" />
+    <Content Include="DashBoard\Vista\Dashboard.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -3817,8 +3821,8 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="fonts\Logo GMG.JPG" />
     <Content Include="Login.aspx" />
-    <Content Include="OrdenCompra.aspx" />
-    <Content Include="Requisicion.aspx" />
+    <Content Include="OrdenCompra\Vistas\OrdenCompra.aspx" />
+    <Content Include="Requisicion\Vistas\Requisicion.aspx" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -3873,18 +3877,18 @@
     <Compile Include="Agente\AgenteServicios.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Compras.aspx.cs">
+    <Compile Include="Compras\Vistas\Compras.aspx.cs">
       <DependentUpon>Compras.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Compras.aspx.designer.cs">
+    <Compile Include="Compras\Vistas\Compras.aspx.designer.cs">
       <DependentUpon>Compras.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Dashboard.aspx.cs">
+    <Compile Include="DashBoard\Vista\Dashboard.aspx.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Dashboard.aspx.designer.cs">
+    <Compile Include="DashBoard\Vista\Dashboard.aspx.designer.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
@@ -3897,27 +3901,27 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
-    <Compile Include="OrdenCompra.aspx.cs">
+    <Compile Include="OrdenCompra\Vistas\OrdenCompra.aspx.cs">
       <DependentUpon>OrdenCompra.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="OrdenCompra.aspx.designer.cs">
+    <Compile Include="OrdenCompra\Vistas\OrdenCompra.aspx.designer.cs">
       <DependentUpon>OrdenCompra.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requisicion.aspx.cs">
+    <Compile Include="Requisicion\Vistas\Requisicion.aspx.cs">
       <DependentUpon>Requisicion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Requisicion.aspx.designer.cs">
+    <Compile Include="Requisicion\Vistas\Requisicion.aspx.designer.cs">
       <DependentUpon>Requisicion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Seguridad\Model\AutenticacionDTO.cs" />
-    <Compile Include="Seguridad\Model\ComprasDTO.cs" />
+    <Compile Include="OrdenCompra\Model\ComprasDTO.cs" />
     <Compile Include="Seguridad\Model\EmpresaDTO.cs" />
     <Compile Include="Seguridad\Model\RespuestaAutenticacionDto.cs" />
     <Compile Include="Seguridad\Servicio\AutenticacionServicio.cs" />
-    <Compile Include="Seguridad\Servicio\ComprasServicio.cs" />
+    <Compile Include="Requisicion\Serivicio\ComprasServicio.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
