--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3904,6 +3904,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requisicion\Model\RequisicionDTO.cs" />
     <Compile Include="Requisicion\Model\RequisicionProductoDTO.cs" />
+    <Compile Include="Requisicion\Model\RequicisionProductoGridDTO.cs" />
     <Compile Include="Requisicion\Serivicio\RequsicionServicio.cs" />
     <Compile Include="Requisicion\Vistas\Requisicion.aspx.cs">
       <DependentUpon>Requisicion.aspx</DependentUpon>
