JSA-02/08/2018 - Avance en requisicion
Se completa proceso de Insertar requisicion

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3905,6 +3905,9 @@
     <Compile Include="Requisicion\Model\RequisicionDTO.cs" />
     <Compile Include="Requisicion\Model\RequisicionProductoDTO.cs" />
     <Compile Include="Requisicion\Model\RequicisionProductoGridDTO.cs" />
+    <Compile Include="Requisicion\Model\RequisicionEDTO.cs" />
+    <Compile Include="Requisicion\Model\RequisicionProductoEDTO.cs" />
+    <Compile Include="Requisicion\Model\RespuestaRequisicionDto.cs" />
     <Compile Include="Requisicion\Serivicio\RequsicionServicio.cs" />
     <Compile Include="Requisicion\Vistas\Requisicion.aspx.cs">
       <DependentUpon>Requisicion.aspx</DependentUpon>
