--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -18,6 +18,10 @@
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
     <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
     <!--Empresas-->
+    
+    <!--Requisicion-->
+    <add key="PostRequisicion" value="api/requisicion/guardarrquisicion"/>
+    <!--Requisicion-->
 
     <!--Para el funcionamiento del token-->
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
@@ -39,6 +43,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <globalization uiCulture="es" culture="es-MX" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
