JSA-03/08/2018-Requisicion Nueva
Requisicion Nueva
Avance Requisicion / Revicion
Avance Requisicion / Autorizacion

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3907,6 +3907,7 @@
     <Compile Include="Requisicion\Model\RequicisionProductoGridDTO.cs" />
     <Compile Include="Requisicion\Model\RequisicionEDTO.cs" />
     <Compile Include="Requisicion\Model\RequisicionProductoEDTO.cs" />
+    <Compile Include="Requisicion\Model\RequisiconEstatus.cs" />
     <Compile Include="Requisicion\Model\RespuestaRequisicionDto.cs" />
     <Compile Include="Requisicion\Serivicio\RequsicionServicio.cs" />
     <Compile Include="Requisicion\Vistas\Requisicion.aspx.cs">
