--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -20,7 +20,8 @@
     <!--Empresas-->
     
     <!--Requisicion-->
-    <add key="PostRequisicion" value="api/requisicion/guardarrquisicion"/>
+    <add key="PostRequisicion" value="api/requisicion/guardar/requisicion"/>
+    <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/"/>
     <!--Requisicion-->
 
     <!--Para el funcionamiento del token-->
