JSA-Avance Requisicion
Flujo Requisición / Revisión
Flujo Requisición / Autorización

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3909,7 +3909,7 @@
     <Compile Include="Requisicion\Model\RequisicionProductoEDTO.cs" />
     <Compile Include="Requisicion\Model\RequisiconEstatus.cs" />
     <Compile Include="Requisicion\Model\RespuestaRequisicionDto.cs" />
-    <Compile Include="Requisicion\Serivicio\RequsicionServicio.cs" />
+    <Compile Include="Requisicion\Servicio\RequsicionServicio.cs" />
     <Compile Include="Requisicion\Vistas\Requisicion.aspx.cs">
       <DependentUpon>Requisicion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
