--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -22,6 +22,7 @@
     <!--Requisicion-->
     <add key="PostRequisicion" value="api/requisicion/guardar/requisicion"/>
     <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/"/>
+    <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/"/>
     <!--Requisicion-->
 
     <!--Para el funcionamiento del token-->
