--- a/1.Layers/1.5Infrastructure/1.5.1Data/Infrastructure.Data/App.Config
+++ b/1.Layers/1.5Infrastructure/1.5.1Data/Infrastructure.Data/App.Config
@@ -5,7 +5,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK014F-PC;initial catalog=Sagas.MainModule;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--Jimmy-->
+    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK014F-PC;initial catalog=Sagas.MainModule;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--Kevin-->
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK7148-PC;initial catalog=Sagas.MainModule;user id=sa;password=Nts.7148;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
