--- a/1.Layers/1.5Infrastructure/1.5.1Data/Infrastructure.Data/Infrastructure.Data.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.1Data/Infrastructure.Data/Infrastructure.Data.csproj
@@ -56,6 +56,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Sagas.Context.tt</DependentUpon>
     </Compile>
+    <Compile Include="DbContexts\Sagas.Context1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Sagas.Context.tt</DependentUpon>
+    </Compile>
     <Compile Include="DbContexts\Sagas.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -81,7 +86,7 @@
     <Content Include="DbContexts\Sagas.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Sagas.edmx</DependentUpon>
-      <LastGenOutput>Sagas.Context.cs</LastGenOutput>
+      <LastGenOutput>Sagas.Context1.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
