--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -23,6 +23,8 @@
     <add key="PostRequisicion" value="api/requisicion/guardar/requisicion"/>
     <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/"/>
     <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/"/>
+    <add key="PutActulizarRevision" value="api/requisicion/actualizar/requisicion"/>
+    <add key="PutActulizarAutorizacion" value="api/requisicion/actualizar/requisicion"/>
     <!--Requisicion-->
 
     <!--Para el funcionamiento del token-->
