--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.neotecknewts.sagas"
+        applicationId "com.example.neotecknewts.sagasapp"
         minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
