--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -14,10 +14,13 @@
     <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
     <!--Compras-->
 
-    <!--Empresas-->    
+    <!--Catalogos-->    
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
     <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
-    <!--Empresas-->
+    <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/" />
+    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
+    <add key="GetListaProductos" value="api/catalogos/prodcutos/listaprodcutos/"/>
+    <!--Catalogos-->
     
     <!--Requisicion-->
     <add key="PostRequisicion" value="api/requisicion/guardar/requisicion"/>
