CVG - Configuracion base de datos remota
Se cambio la cadena de configuracion para la base de datos

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -22,10 +22,10 @@
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
     <add key="JWT_EXPIRE_MINUTES" value="30" />
-    <add key="AppCompraEntraGas" value="Compra - Captura Requisicion|Iniciar descarga|ic_iniciar_descarga" />
-    <add key="" value="" />
-    <add key="" value="" />
-    <add key="" value="" />
+    <add key="AppCompraEntraGas" value="Entrada de gas - Inventario General|Registrar Papeleta|ic_papeleta" />
+    <add key="AppCompraGasFinalizarDescarga" value="Entrada de gas - Inventario General|Finalizar Descarga|ic_finalizar_descarga" />
+    <add key="AppCompraGasIniciarDescarga" value="Entrada de gas - Inventario General|Iniciar Descarga|ic_iniciar_descarga" />
+    <add key="AppCompraVerOCompra" value="Compras|Ordenes de compra|ic_ordenes_compra" />
     <add key="" value="" />
     <add key="" value="" />
     <add key="" value="" />
