--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.Http">
       <HintPath>..\..\..\..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
@@ -65,6 +66,8 @@
     <Compile Include="NotValidCodeException.cs" />
     <Compile Include="NotValidInvoiceMonthException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Respuesta\Respuesta.cs" />
+    <Compile Include="Respuesta\RespuestaHttp.cs" />
     <Compile Include="Validaciones\Error.cs" />
     <Compile Include="Validaciones\ExpresionRegular.cs" />
   </ItemGroup>
